--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background: #000000;
+  background: #111;
 }
 
 .topnav {
@@ -13,6 +13,16 @@ body {
 .topnavicon {
   height: 50px;
   float: left;
+  -webkit-tap-highlight-color: transparent;
+  transition: opacity 0.5s;
+}
+
+.topnavicon:hover {
+  opacity: 75%;
+}
+
+.topnavicon:active {
+  opacity: 50%;
 }
 
 .searchbar {
@@ -26,4 +36,33 @@ body {
   float: left;
   text-decoration: none;
   text-align: center;
+  background: #333;
+  border-radius: 100px;
+  transition: background 0.5s;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.topnavtitle:hover {
+  background: #555;
+}
+
+.topnavtitle:active {
+  background: #777;
+}
+
+.topnavsearchicon {
+  color: white;
+  float: right;
+  padding: 18px 18px;
+  border-radius: 100px;
+  -webkit-tap-highlight-color: transparent;
+  transition: background 0.5s;
+}
+
+.topnavsearchicon:hover {
+  background: #555;
+}
+
+.topnavsearchicon:active {
+  background: #777;
 }
