--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,11 @@ body {
 .youtube {
   border-radius: 15px;
 }
+
+.checkoutsocialmedia {
+  padding: 10px;
+}
+
+.discwidget {
+  padding: 10px;
+}
