Changed font to Open Sans

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
 body {
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   background: #111;
   color: white;
 }
@@ -44,6 +46,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   position: relative;
   left: 5px;
+  height: 17px;
 }
 
 .topnavtitle:hover {
@@ -76,7 +79,7 @@ body {
   text-align: center;
   border-radius: 15px;
   padding: 10px;
-  height: 1150px;
+  height: 1225px;
 }
 
 .youtube {
@@ -133,7 +136,7 @@ body {
   }
 
   .social {
-    height: 1270px;
+    height: 1350px;
   }
 }
 
