--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ body {
   -webkit-tap-highlight-color: transparent;
   transition: opacity 0.5s;
   border-radius: 100px;
+  width: 50px;
+  height: 50px;
 }
 
 .topnavicon:hover {
