--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFWZ0bbck.woff2)
+    format("woff2");
+  font-display: swap;
+}
 body {
   font-family: "Open Sans", sans-serif;
   background: #111;
