--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,18 @@ body {
   height: 50px;
   float: left;
   -webkit-tap-highlight-color: transparent;
-  transition: opacity 0.5s;
+  transition: /* opacity 0.5s */ box-shadow 0.5s;
   border-radius: 100px;
   width: 50px;
   height: 50px;
 }
 .topnavicon:hover {
-  opacity: 75%;
+  /* opacity: 75%; */
+  box-shadow: 0px 0px 25px #555 !important;
 }
 .topnavicon:active {
-  opacity: 50%;
+  /* opacity: 50%; */
+  box-shadow: 0px 0px 15px #888 !important;
 }
 .searchbar {
   border-radius: 15px;
@@ -35,19 +37,29 @@ body {
   text-decoration: none;
   background: #333;
   border-radius: 100px;
-  transition: background 0.5s;
+  transition: background 0.5s, box-shadow 0.5s;
   -webkit-tap-highlight-color: transparent;
   text-align: center;
 }
 .a-button:hover {
   background: #555;
+  box-shadow: 0px 0px 25px #333;
 }
 .a-button:active {
   background: #777;
+  box-shadow: 0px 0px 25px #888;
 }
 .topnavtitle {
   float: left;
   position: relative;
   left: 5px;
   height: 17px;
+}
+
+.topnavtitle:hover {
+  box-shadow: 0px 0px 25px #555 !important;
+}
+
+.topnavtitle:active {
+  box-shadow: 0px 0px 25px #888 !important;
 }
