--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,9 @@ body {
   box-shadow: 0px 0px 25px #333;
 }
 .a-button:active {
-  background: #777;
+/*  background: #777; */
+  background: #FFF
+  color: #000
   box-shadow: 0px 0px 25px #888;
 }
 .topnavtitle {
