--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ body {
 }
 .a-button:active {
 /*  background: #777; */
-  background: #FFF
-  color: #000
+  background: #FFF;
+  color: #000;
   box-shadow: 0px 0px 25px #888;
 }
 .topnavtitle {
