--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,8 @@ body {
   box-shadow: 0px 0px 25px #333;
 }
 .a-button:active {
-/*  background: #777; */
-  background: #FFF;
+  /*  background: #777; */
+  background: #fff;
   color: #000;
   box-shadow: 0px 0px 25px #888;
 }
