--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   color: white;
 }
 .topnav {
-  overflow: hidden;
+  overflow: visible;
   background: #333;
   border-radius: 100px;
   height: 50px;
