--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,21 @@
 body {
   font-family: "Open Sans", sans-serif;
   background: #111;
-  color: white;
+  color: #fff;
+  transition: color 0.5s, background 1s, margin-top 0.5s;
 }
 .topnav {
   overflow: visible;
   background: #333;
   border-radius: 100px;
   height: 50px;
+  transition: background 0.5s;
 }
+
+.topnav-light {
+  background: #ccc !important;
+}
+
 .topnavicon {
   height: 50px;
   float: left;
@@ -18,18 +25,6 @@ body {
   border-radius: 100px;
   width: 50px;
   height: 50px;
-}
-.topnavicon:hover {
-  /* opacity: 75%; */
-  box-shadow: 0px 0px 25px #555 !important;
-}
-.topnavicon:active {
-  /* opacity: 50%; */
-  box-shadow: 0px 0px 15px #888 !important;
-}
-.searchbar {
-  border-radius: 15px;
-  overflow: hidden;
 }
 .a-button {
   color: white;
@@ -51,17 +46,35 @@ body {
   color: #000;
   box-shadow: 0px 0px 25px #888;
 }
+
+.a-button-light {
+  color: black !important;
+  background: #ccc !important;
+}
+.a-button-light:hover {
+  background: #aaa !important;
+  box-shadow: 0px 0px 25px #888 !important;
+}
+.a-button-light:active {
+  background: #000 !important;
+  color: #fff !important;
+  box-shadow: 0px 0px 50px #000 !important;
+}
+
 .topnavtitle {
   float: left;
   position: relative;
   left: 5px;
   height: 17px;
+  margin-left: 5px;
 }
 
-.topnavtitle:hover {
-  box-shadow: 0px 0px 25px #555 !important;
+.container {
+  background: #222;
+  border-radius: 25px;
+  transition: background 0.5s;
 }
 
-.topnavtitle:active {
-  box-shadow: 0px 0px 25px #888 !important;
+.container-light {
+  background: #ddd !important;
 }
