--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,10 @@ body {
   text-decoration: none;
   background: #333;
   border-radius: 100px;
-  transition: background 0.5s, box-shadow 0.5s, color 0.5s;
+  transition: background 0.5s, box-shadow 0.5s, color 0.5s, border 0.5s;
   -webkit-tap-highlight-color: transparent;
   text-align: center;
+  border: none;
 }
 .a-button:hover {
   background: #555;
@@ -45,6 +46,7 @@ body {
   background: #fff;
   color: #000;
   box-shadow: 0px 0px 25px #888;
+  border: 5px solid white;
 }
 
 .a-button-light {
@@ -67,6 +69,10 @@ body {
   left: 5px;
   height: 17px;
   margin-left: 5px;
+}
+
+.topnavtitle:active {
+  border: none !important;
 }
 
 .container {
