--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
   background: #000 !important;
   color: #fff !important;
   box-shadow: 0px 0px 50px #000 !important;
+  border: 5px solid black !important;
 }
 
 .topnavtitle {
