--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+
 body {
   font-family: "Open Sans", sans-serif;
   background: #111;
@@ -96,4 +97,74 @@ body {
 
 .container-light {
   background: #ddd !important;
+}
+
+.overlay {
+  z-index: 10 !important;
+  margin: 0;
+  text-align: center;
+  background-color: rgba(100, 100, 100, 0.5);
+  width: 100%;
+  height: 0%;
+  display: block;
+  position: fixed;
+  /*   top: 0; */
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: background 0.5s;
+}
+
+.overlay--light-mode {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay--show {
+  opacity: 1;
+  animation: getIn 1s;
+  height: 100%;
+  border-radius: 0px 0px 0px 0px;
+}
+
+.overlay--hide {
+  opacity: 0;
+  animation: getOut 1s;
+  height: 0%;
+  border-radius: 25px 25px 0px 0px;
+}
+
+@keyframes getIn {
+  0% {
+    opacity: 0;
+    height: 0%;
+    border-radius: 25px 25px 0px 0px;
+  }
+  50% {
+    opacity: 1;
+    height: 100%;
+    border-radius: 25px 25px 0px 0px;
+  }
+  100% {
+    opacity: 1;
+    height: 100%;
+    border-radius: 0px 0px 0px 0px;
+  }
+}
+
+@keyframes getOut {
+  0% {
+    opacity: 1;
+    height: 100%;
+    border-radius: 0px 0px 0px 0px;
+  }
+  50% {
+    opacity: 1;
+    height: 100%;
+    border-radius: 25px 25px 0px 0px;
+  }
+  100% {
+    opacity: 0;
+    height: 0%;
+    border-radius: 25px 25px 0px 0px;
+  }
 }
