--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   color: #fff;
 }
 
+.--no-shadow {
+  box-shadow: 0px 0px 0px !important;
+}
+
 .website-background {
   z-index: -3;
   margin: 0;
