--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body {
   border-radius: 100px;
   height: 52px;
   transition: background 0.25s;
+  box-shadow: 0px 0px 5px #000;
 }
 
 .topnav-light {
@@ -135,7 +136,7 @@ form {
   color: #000;
   box-shadow: 0px 0px 25px #888;
   /*   border: 5px solid white; */
-  transform: scale(0.85);
+  transform: scale(0.9);
 }
 
 .button-light {
@@ -175,6 +176,7 @@ form {
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
+  box-shadow: 0px 0px 5px #000;
 }
 
 .container-light {
