--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,8 @@ form {
   text-decoration: none;
   background: #333;
   border-radius: 100px;
-  transition: background 0.25s, box-shadow 0.25s, color 0.25s, border 0.25s,
-    transform 0.25s;
+  transition: background 0.25s, box-shadow 0.25s, text-shadow 0.25s, color 0.25s,
+    border 0.25s, transform 0.25s;
   -webkit-tap-highlight-color: transparent;
   text-align: center;
   border: none;
@@ -129,6 +129,7 @@ form {
   box-shadow: 0px 0px 25px #333;
   transform: scale(1.15);
   z-index: 10;
+  text-shadow: 0px 0px 5px #ccc;
 }
 .button:active {
   /*  background: #777; */
@@ -137,6 +138,7 @@ form {
   box-shadow: 0px 0px 50px #888;
   /*   border: 5px solid white; */
   transform: scale(0.9);
+  text-shadow: 0px 0px 5px #555;
 }
 
 @media only screen and (max-width: 600px) {
@@ -170,11 +172,13 @@ form {
 .button-light:hover {
   background: #aaa !important;
   box-shadow: 0px 0px 25px #888 !important;
+  text-shadow: 0px 0px 5px #555 !important;
 }
 .button-light:active {
   background: #000 !important;
   color: #fff !important;
   box-shadow: 0px 0px 50px #000 !important;
+  text-shadow: 0px 0px 5px #ccc !important;
   /*   border: 5px solid black !important; */
 }
 
