--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
 .topnav {
   overflow: visible;
   background: #333;
-  border-radius: 100px;
+  border-radius: 10px;
   height: 52px;
   transition: background 0.25s;
   box-shadow: 0px 0px 5px #000;
@@ -85,14 +85,15 @@ body {
 }
 
 .topnavicon {
-  height: 50px;
   float: left;
   -webkit-tap-highlight-color: transparent;
   transition: /* opacity 0.5s */ box-shadow 0.5s;
-  border-radius: 100px;
+  border-radius: 10px;
   width: 52px;
   height: 52px;
+  margin-top: 0 !important;
   margin-bottom: 0 !important;
+  margin-left: 0 !important;
   /*   border: none !important; */
 }
 
@@ -113,7 +114,7 @@ form {
   padding: 16px 16px;
   text-decoration: none;
   background: #333;
-  border-radius: 100px;
+  border-radius: 10px;
   transition: background 0.25s, box-shadow 0.25s, text-shadow 0.25s, color 0.25s,
     border 0.25s, transform 0.25s;
   -webkit-tap-highlight-color: transparent;
@@ -122,7 +123,10 @@ form {
   font-size: 1em;
   cursor: pointer;
   display: inline-block;
-  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 .button:hover {
   background: #555;
@@ -148,6 +152,8 @@ form {
   }
   .button {
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .container {
     width: 95%;
@@ -162,6 +168,14 @@ form {
   .topnavtitle,
   .topnavicon {
     width: auto;
+  }
+
+  .container p {
+    margin-bottom: 20px !important;
+  }
+
+  .container button {
+    margin-top: 0 !important;
   }
 }
 
@@ -186,9 +200,10 @@ form {
   float: left;
   position: relative;
   left: 5px;
-  height: 100%;
+  height: 52px;
   margin-left: 5px;
   display: block;
+  margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
 
@@ -198,13 +213,15 @@ form {
 
 .container {
   background: #222;
-  border-radius: 25px;
+  border-radius: 10px;
   transition: background 0.5s, color 0.5s;
   color: #fff;
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
   box-shadow: 0px 0px 5px #000;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .container-light {
@@ -284,4 +301,18 @@ form {
 
 .--fix-topnav-height {
   height: 50px;
+}
+
+i {
+  margin-right: 5px;
+}
+
+.container p {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.container button {
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
