--- a/style.css
+++ b/style.css
@@ -6,12 +6,10 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 200;
   background: #111;
   color: #fff;
   transition: color 0.5s, background 1s, margin-top 0.5s;
-  margin: 10px 10px 0 10px;
+  margin: 0;
 }
 
 .--force-black-text {
@@ -75,6 +73,7 @@ body {
   height: 52px;
   transition: background 0.25s;
   box-shadow: 0px 0px 5px #000;
+  margin: 10px 10px 0 10px;
 }
 
 .topnavicon {
@@ -87,6 +86,7 @@ body {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
   margin-left: 0 !important;
+  padding: 0 !important;
   /*   border: none !important; */
 }
 
@@ -94,22 +94,13 @@ body {
   border: none !important;
 } */
 
-form {
-  display: inline-block;
-}
-
-.topnavform {
-  display: block !important;
-}
-
 .button {
   color: white;
-  padding: 16px 16px;
   text-decoration: none;
   background: #333;
   border-radius: 10px;
   transition: background 0.25s, box-shadow 0.25s, text-shadow 0.25s, color 0.25s,
-    border 0.25s, transform 0.25s;
+    border 0.25s;
   -webkit-tap-highlight-color: transparent;
   text-align: center;
   border: none;
@@ -120,11 +111,12 @@ form {
   margin-bottom: 10px;
   margin-left: 5px;
   margin-right: 5px;
+  text-decoration: none;
+  padding: 16px 16px;
 }
 .button:hover {
   background: #555;
   box-shadow: 0px 0px 25px #333;
-  transform: scale(1.15);
   z-index: 10;
   text-shadow: 0px 0px 5px #ccc;
 }
@@ -134,28 +126,23 @@ form {
   color: #000;
   box-shadow: 0px 0px 50px #888;
   /*   border: 5px solid white; */
-  transform: scale(0.9);
   text-shadow: 0px 0px 5px #555;
 }
 
 @media only screen and (max-width: 600px) {
-  form {
-    display: block;
-    width: 100%;
+  .topnavtitle {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
   }
   .button {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 95%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
   .container {
-    width: 95%;
-  }
-  .button:hover {
-    transform: none;
-  }
-  .button:active {
-    transform: scale(0.9);
+    width: 91%;
   }
   .topnavform,
   .topnavtitle,
@@ -176,11 +163,12 @@ form {
   float: left;
   position: relative;
   left: 5px;
-  height: 52px;
+  height: 36px;
   margin-left: 5px;
   display: block;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
 }
 
 /* .topnavtitle:active {
@@ -266,10 +254,6 @@ form {
   }
 }
 
-.--fix-topnav-height {
-  height: 50px;
-}
-
 i {
   margin-right: 5px;
 }
@@ -279,7 +263,7 @@ i {
   margin-bottom: 10px;
 }
 
-.container button {
+.container .button {
   margin-top: 10px;
   margin-bottom: 20px;
 }
