--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -23,32 +23,19 @@ body {
 .website-background {
   z-index: -3;
   margin: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  animation: unBlur 1s;
-  filter: blur(0px);
-}
-
-.website-background-container {
-  z-index: -3;
-  margin: 0;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  animation: makeItBigger 1s;
+  animation: fade-in 1s, un-blur 2s;
   transition: background 1s;
   background-image: url("/assets/images/background.png");
-  transform: scale(1.25);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-@keyframes unBlur {
+@keyframes un-blur {
   0% {
     filter: blur(15px);
   }
@@ -57,12 +44,12 @@ body {
   }
 }
 
-@keyframes makeItBigger {
+@keyframes fade-in {
   0% {
-    transform: scale(1);
+    opacity: 0;
   }
   100% {
-    transform: scale(1.25);
+    opacity: 1;
   }
 }
 
