--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -56,7 +56,7 @@ body {
 .button {
   color: white;
   text-decoration: none;
-  background: #333;
+  background: #633;
   border-radius: 10px;
   transition: background 0.25s, box-shadow 0.25s, text-shadow 0.25s, color 0.25s,
     border 0.25s;
@@ -74,16 +74,16 @@ body {
   padding: 16px 16px;
 }
 .button:hover {
-  background: #555;
-  box-shadow: 0px 0px 25px #333;
+  background: #a55;
+  box-shadow: 0px 0px 25px #633;
   z-index: 10;
   text-shadow: 0px 0px 5px #ccc;
 }
 .button:active {
   /*  background: #777; */
-  background: #fff;
+  background: #fcc;
   color: #000;
-  box-shadow: 0px 0px 50px #888;
+  box-shadow: 0px 0px 50px #a88;
   /*   border: 5px solid white; */
   text-shadow: 0px 0px 5px #555;
 }
@@ -98,7 +98,7 @@ body {
 }
 
 .container {
-  background: #222;
+  background: #422;
   border-radius: 10px;
   transition: background 0.5s, color 0.5s;
   color: #fff;
